tekst til alle modals

--- a/template.html
+++ b/template.html
@@ -95,13 +95,13 @@
           <div id="myDropdown" class="dropdown-content">
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal3"></button>
+              <div id="myModal3" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <p> Dette er den samlet palles højde med alle pakkerne på.</p>
+                    <img class="infografi" src="img/fyldningshoejde-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -109,12 +109,12 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal4"></button>
+              <div id="myModal4" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Fyldningen skal som standart fylde 70% af den samlet palles højde, for at den kan blive godkendt til at pakke og videresende.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -124,13 +124,13 @@
             <input type="text" id="fname" name="fname" value="%"><br><br>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal5"></button>
+              <div id="myModal5" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <p> Tilladt udhæng betyder, at det er tilladt pallens fyld må overskride pallen på siderne.</p>
+                    <img class="infografi" src="img/fyldningshoejde-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -146,12 +146,12 @@
           <div id="myDropdown2" class="dropdown-content">
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal6"></button>
+              <div id="myModal6" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens højde.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -160,12 +160,12 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal7"></button>
+              <div id="myModal7" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens bedre.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -174,12 +174,12 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal8"></button>
+              <div id="myModal8" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens længde.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -197,12 +197,12 @@
             <!-- afkrydsningsfelter -->
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal9"></button>
+              <div id="myModal9" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Blandede lag betyder at hvert lag må blive blandet med forskellige pakker.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -213,12 +213,12 @@
             </label>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal10"></button>
+              <div id="myModal10" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Spred pakker betyder at der skal være mellemrum mellem alle pakker på pallen.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -229,12 +229,12 @@
             </label>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal11"></button>
+              <div id="myModal11" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Centret vægt betyder at vægten på pakkerne bliver placeret midt på pallen, så den bliver mere stabil.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -245,12 +245,12 @@
             </label>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal12"></button>
+              <div id="myModal12" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Sæt pakker ved kant, indebærer at pakker bliver placeret ved pallens kant.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -261,12 +261,12 @@
             </label>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal13"></button>
+              <div id="myModal13" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p>Ved kun fulde lag skal det forstås at maskinen kun vil pakke lag der fylder hele pallens areal.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -277,12 +277,12 @@
             </label>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal14"></button>
+              <div id="myModal14" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Bind lag betyder at pakker kommer til at overlappe hinanden fra lag til lag.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -294,12 +294,12 @@
             <hr class="afstanspakkemoenster"><br>
 
               <!-- infoknap -->
-                <button class="modal-button" href="#myModal2"></button>
-                <div id="myModal2" class="modal">
+                <button class="modal-button" href="#myModal15"></button>
+                <div id="myModal15" class="modal">
                   <!-- popup content-->
                     <div class="infoknap-content">
                       <span class="close">&times;</span>
-                      <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                      <p> Sensor maks positiv størrelse, her er der tale en sensor der kan fravælge pakker, der ikke lever op til den angivet max størrelse.</p>
                       <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                     </div>
                 </div>
@@ -308,12 +308,12 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button class="modal-button" href="#myModal2"></button>
-              <div id="myModal2" class="modal">
+              <button class="modal-button" href="#myModal16"></button>
+              <div id="myModal16" class="modal">
                 <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <p> Sensor min positiv størrelse, her er der tale en sensor der kan fravælge pakker, der ikke lever op til den angivet minimum størrelse.</p>
                     <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
@@ -333,12 +333,12 @@
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
  <div class="panel">
     <!-- infoknap -->
-      <button class="modal-button" href="#myModal2"></button>
-      <div id="myModal2" class="modal">
+      <button class="modal-button" href="#myModal17"></button>
+      <div id="myModal17" class="modal">
         <!-- popup content-->
           <div class="infoknap-content">
             <span class="close">&times;</span>
-            <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+            <p> Her skal du navngive din pakke/produkt.</p>
             <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
           </div>
       </div>
@@ -348,12 +348,12 @@
   <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
 
   <!-- infoknap -->
-    <button class="modal-button" href="#myModal2"></button>
-    <div id="myModal2" class="modal">
+    <button class="modal-button" href="#myModal18"></button>
+    <div id="myModal18" class="modal">
       <!-- popup content-->
         <div class="infoknap-content">
           <span class="close">&times;</span>
-          <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+          <p> Her angiver du hvor mange af det angivet produkt der bliver producere.</p>
           <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
         </div>
     </div>
@@ -367,12 +367,12 @@
       <div id="myDropdown4" class="dropdown-content">
 
         <!-- infoknap -->
-          <button class="modal-button" href="#myModal2"></button>
-          <div id="myModal2" class="modal">
+          <button class="modal-button" href="#myModal19"></button>
+          <div id="myModal19" class="modal">
             <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <p> Pakkens længde illustreret på billedet.</p>
                 <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
@@ -382,12 +382,12 @@
         <input type="text" id="fname" name="fname" value="mm"><br><br>
 
         <!-- infoknap -->
-          <button class="modal-button" href="#myModal2"></button>
-          <div id="myModal2" class="modal">
+          <button class="modal-button" href="#myModal20"></button>
+          <div id="myModal20" class="modal">
             <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <p> Pakkens højde illustreret på billedet.</p>
                 <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
@@ -396,12 +396,12 @@
         <input type="text" id="fname" name="fname" value="mm"><br><br>
 
         <!-- infoknap -->
-          <button class="modal-button" href="#myModal2"></button>
-          <div id="myModal2" class="modal">
+          <button class="modal-button" href="#myModal21"></button>
+          <div id="myModal21" class="modal">
             <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <p> Pakkens bredde illustreret billedet.</p>
                 <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
@@ -419,12 +419,12 @@
       <div id="myDropdown5" class="dropdown-content">
         <!-- Pakketype formularvalg med valgmuligheder -->
         <!-- infoknap -->
-          <button class="modal-button" href="#myModal2"></button>
-          <div id="myModal2" class="modal">
+          <button class="modal-button" href="#myModal22"></button>
+          <div id="myModal22" class="modal">
             <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <p> Pakke valg illustreret billede.</p>
                 <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
