z-index problem fixed

--- a/template.html
+++ b/template.html
@@ -115,7 +115,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Fyldningen skal som standart fylde 70% af den samlet palles højde, for at den kan blive godkendt til at pakke og videresende.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/fyldningsprocent-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -130,7 +130,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Tilladt udhæng betyder, at det er tilladt pallens fyld må overskride pallen på siderne.</p>
-                    <img class="infografi" src="img/fyldningshoejde-01.png" width="100%" height="auto">
+                    <img class="infografi" src="img/tilladtudhaeng-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -152,7 +152,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens højde.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/palledimension-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -166,7 +166,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens bedre.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/palledimension-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -180,7 +180,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Dette ændre sig efter hvilket palle type du har valg. Det er selve pallens længde.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/palledimension-01.png" width="100%" height="auto">
                   </div>
               </div>
 
