billeder til infoknap er done

--- a/template.html
+++ b/template.html
@@ -203,7 +203,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Blandede lag betyder at hvert lag må blive blandet med forskellige pakker.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/blandetlag-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -219,7 +219,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Spred pakker betyder at der skal være mellemrum mellem alle pakker på pallen.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/spredpakker-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -235,7 +235,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Centret vægt betyder at vægten på pakkerne bliver placeret midt på pallen, så den bliver mere stabil.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/kunfuldlag-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -251,7 +251,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Sæt pakker ved kant, indebærer at pakker bliver placeret ved pallens kant.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/centerload-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -267,7 +267,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p>Ved kun fulde lag skal det forstås at maskinen kun vil pakke lag der fylder hele pallens areal.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/bindlag-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -283,7 +283,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Bind lag betyder at pakker kommer til at overlappe hinanden fra lag til lag.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/Pakkervedkant-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -300,7 +300,7 @@
                     <div class="infoknap-content">
                       <span class="close">&times;</span>
                       <p> Sensor maks positiv størrelse, her er der tale en sensor der kan fravælge pakker, der ikke lever op til den angivet max størrelse.</p>
-                      <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                      <img class="infografi" src="img/sensormaks-01.png" width="100%" height="auto">
                     </div>
                 </div>
 
@@ -314,7 +314,7 @@
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
                     <p> Sensor min positiv størrelse, her er der tale en sensor der kan fravælge pakker, der ikke lever op til den angivet minimum størrelse.</p>
-                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    <img class="infografi" src="img/sensormin-01.png" width="100%" height="auto">
                   </div>
               </div>
 
@@ -339,7 +339,6 @@
           <div class="infoknap-content">
             <span class="close">&times;</span>
             <p> Her skal du navngive din pakke/produkt.</p>
-            <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
           </div>
       </div>
 
@@ -354,7 +353,6 @@
         <div class="infoknap-content">
           <span class="close">&times;</span>
           <p> Her angiver du hvor mange af det angivet produkt der bliver producere.</p>
-          <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
         </div>
     </div>
 
@@ -373,7 +371,7 @@
               <div class="infoknap-content">
                 <span class="close">&times;</span>
                 <p> Pakkens længde illustreret på billedet.</p>
-                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                <img class="infografi" src="img/produktdimension-01.png" width="100%" height="auto">
               </div>
           </div>
 
@@ -388,7 +386,7 @@
               <div class="infoknap-content">
                 <span class="close">&times;</span>
                 <p> Pakkens højde illustreret på billedet.</p>
-                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                <img class="infografi" src="img/produktdimension-01.png" width="100%" height="auto">
               </div>
           </div>
 
@@ -402,7 +400,7 @@
               <div class="infoknap-content">
                 <span class="close">&times;</span>
                 <p> Pakkens bredde illustreret billedet.</p>
-                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                <img class="infografi" src="img/produktdimension-01.png" width="100%" height="auto">
               </div>
           </div>
 
@@ -425,7 +423,7 @@
               <div class="infoknap-content">
                 <span class="close">&times;</span>
                 <p> Pakke valg illustreret billede.</p>
-                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                <img class="infografi" src="img/pakkeform-01.png" width="100%" height="auto">
               </div>
           </div>
 
