pil tilbage history

--- a/panel.html
+++ b/panel.html
@@ -43,9 +43,11 @@
       </a>
     </div>
   </div>
-<div class="back-pil">
-  <a href="forside.html"><img title="Gå tilbage til forsiden" src="img/back-pil.png" alt="En tilbage vej til forsiden"></a>
-</div>
+
+
+  <!--<a href="forside.html"><img title="Gå tilbage til forsiden" src="img/back-pil.png" alt="En tilbage vej til forsiden"></a> -->
+  <input type="button"  onclick="window.history.back()" class="back-pil">
+
 
   <h1 class="h1-text">Oversigt</h1>
   <hr class="top-line">
@@ -77,6 +79,7 @@
 <div class="pak"><a href="#" style="
     color: #ffffff;">Begynd Pakning</a></div>
 </div>
+
 </body>
 
 </html>
