tilbage tilføjet til temp

--- a/template.html
+++ b/template.html
@@ -46,6 +46,8 @@
     </div>
   </div>
 
+  <input type="button"  onclick="window.history.back()" class="back-pil">
+
 
 <!-- Palle accordion -->
 <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
