se palle knap kontrolside

--- a/panel.html
+++ b/panel.html
@@ -68,7 +68,17 @@
 
   <h2 class="visning">Visning af pallen</h2>
   <hr class="midt-line">
-  <div class="se-palle"><a href="#">Se Palle</a></div>
+  <!-- infoknap -->
+    <button class="se-palle" href="#myModal23"> Se palle </button>
+    <div id="myModal23" class="modal">
+      <!-- popup content-->
+        <div class="infoknap-content">
+          <span class="close">&times;</span>
+          <h2> Visionlisering af din palle <h2>
+          <img class="infografi" src="img/topplacering-01.png" width="100%" height="auto">
+        </div>
+    </div>
+  <!--<div class="se-palle"><a href="#">Se Palle</a></div> -->
 
 <h2 class="kontrol">Kontrol Panel</h2>
 <hr class="bottom-line">
