--- a/panel.html
+++ b/panel.html
@@ -83,11 +83,10 @@
 <h2 class="kontrol">Kontrol Panel</h2>
 <hr class="bottom-line">
 <div class="flex-knapper-pl">
-<div class="print"><a href="#">Print Label</a></div>
-<div class="gem"><a href="#">Gem Skabelon</a></div>
-<div class="plan"><a href="#">Tilføj til planlægning</a></div>
-<div class="pak"><a href="#" style="
-    color: #ffffff;">Begynd Pakning</a></div>
+  <div class="print"><a href="#">Print Label</a></div>
+  <div class="gem"><a href="#">Gem Skabelon</a></div>
+  <div class="plan"><a href="#">Tilføj til planlægning</a></div>
+  <div class="pak"><a href="#" style="color: #ffffff;">Begynd Pakning</a></div>
 </div>
 
 </body>
