media queries for log ind done og næsten for forsiden

--- a/forside.html
+++ b/forside.html
@@ -35,8 +35,8 @@
       <!-- Burgermenuens indhold -->
       <div id="myLinks">
         <a href="forside.html">Forside</a>
-        <a href="template.html">Create template</a>
-        <a href="panel.html">Control panel</a>
+        <a href="template.html">Lav Skabelon</a>
+        <a href="panel.html">Kontrol panel</a>
       </div>
       <a href="javascript:void(0);" class="icon" onclick="myfunction(menubar)">
         <i class="fa fa-bars"></i>
@@ -50,7 +50,7 @@
 
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="img/engelsk.png" alt="UK flag" style="width:100%">
+      <img src="img/slider-billede1.png" alt="Guide til knapperne på forsiden" style="width:100%">
       <div class="text">Step 1</div>
     </div>
 
