--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 </div>
 </div>
 
+<h1 class="rn">ROBOT NORDIC</h1>
 
 <form class="box" action="index.html" method="post">
-  <h1> Log ind </h1>
+  <h2> Log ind </h2>
   <input type="text" placeholder="Brugernavn">
   <input type="password" placeholder="Kodeord">
   <div class="log-ind">
