media query done for panel

--- a/panel.html
+++ b/panel.html
@@ -35,10 +35,10 @@
       <!-- Burgermenuens indhold -->
       <div id="myLinks">
         <a href="forside.html">Forside</a>
-        <a href="template.html">Create template</a>
-        <a href="panel.html">Control panel</a>
+        <a href="template.html">Lav Skabelon</a>
+        <a href="panel.html">Kontrol panel</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <a href="javascript:void(0);" class="icon" onclick="myfunction(menubar)">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -51,6 +51,7 @@
 
   <h1 class="h1-text">Oversigt</h1>
   <hr class="top-line">
+  <div class="panel-indhold">
   <div class="panel-text">
     <div class="pallenavn">Pallenavn:</div>
     <div class="palletype">Palletype:</div>
@@ -64,6 +65,7 @@
     <div class="fyldnings-test">Test</div>
     <div class="procent-test">Test</div>
     <div class="tilladt-test">Test</div>
+  </div>
   </div>
 
   <h2 class="visning">Visning af pallen</h2>
