--- a/forside.html
+++ b/forside.html
@@ -62,7 +62,7 @@
 
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="img/img_mountains_wide.jpg" style="width:100%">
+      <img src="img/img_mountains_wide.jpg" alt="billede af bjerg" style="width:100%">
       <div class="text">Step 3</div>
     </div>
 
