--- a/panel.html
+++ b/panel.html
@@ -76,7 +76,7 @@
       <!-- popup content-->
         <div class="infoknap-content">
           <span class="close">&times;</span>
-          <h2> Visionlisering af din palle <h2>
+          <h2> Visionlisering af din palle</h2>
           <img class="infografi" src="img/topplacering-01.png" width="100%" height="auto">
         </div>
     </div>
