--- a/forside.html
+++ b/forside.html
@@ -49,20 +49,20 @@
     <div class="slideshow-container">
 
     <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="img/slider-billede1.png" alt="Guide til knapperne på forsiden" style="width:100%">
+      <div class="numbertext"></div>
+      <img src="img/billede-slider1.png" alt="Information billede om Lav Skabelon knappen" style="width:100%">
       <div class="text">Step 1</div>
     </div>
 
     <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="img/img_snow_wide.jpg" alt="Denneborg flag" style="width:100%">
+      <div class="numbertext"></div>
+      <img src="img/billede-slider2.png" alt="Information billede om Load Skabelon knappen" style="width:100%">
       <div class="text">Step 2</div>
     </div>
 
     <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="img/img_mountains_wide.jpg" alt="billede af bjerg" style="width:100%">
+      <div class="numbertext"></div>
+      <img src="img/billede-slider3.png" alt="information billede om Kontrol Panel knappen" style="width:100%">
       <div class="text">Step 3</div>
     </div>
 
