--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
         <a href="template.html">Create template</a>
         <a href="panel.html">Control panel</a>
       </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction(menubar)">
+      <a href="javascript:void(0);" class="icon" onclick="myfunction(menubar)">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -332,7 +332,7 @@
 
 
 <!-- Produkt accordion -->
-<button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
+<button class="accordion2"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
  <div class="panel">
     <!-- infoknap -->
       <button class="modal-button" href="#myModal17"></button>
@@ -438,7 +438,7 @@
   </div>
 
   <!-- Tilføj flere produkter accordion (en kopi af original accordian) -->
-  <button class="accordion2">Tilføj Produkt +</button>
+  <button class="accordion3">Tilføj Produkt +</button>
   <div class="panel2">
 
     <label for="fname">Produkt Navn:</label><br>
