--- a/forside.html
+++ b/forside.html
@@ -50,19 +50,19 @@
 
     <div class="mySlides fade">
       <div class="numbertext"></div>
-      <img src="img/billede-slider1.png" alt="Information billede om Lav Skabelon knappen" style="width:100%">
+      <img src="img/billede-slider1.png" alt="Information billede om Lav Skabelon knappen">
       <div class="text">Step 1</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext"></div>
-      <img src="img/billede-slider2.png" alt="Information billede om Load Skabelon knappen" style="width:100%">
+      <img src="img/billede-slider2.png" alt="Information billede om Load Skabelon knappen">
       <div class="text">Step 2</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext"></div>
-      <img src="img/billede-slider3.png" alt="information billede om Kontrol Panel knappen" style="width:100%">
+      <img src="img/billede-slider3.png" alt="information billede om Kontrol Panel knappen">
       <div class="text">Step 3</div>
     </div>
 
