panel og css valideret

--- a/panel.html
+++ b/panel.html
@@ -46,8 +46,7 @@
 
 
 
-  <input type="button"  onclick="window.history.back()" class="back-pil">
-
+  <button  onclick="window.history.back()" class="back-pil"><img src="img/back-pil-01-01.png" alt="tilbage knap"></button>
 
   <h1 class="h1-text">Oversigt</h1>
   <hr class="top-line">
@@ -71,13 +70,13 @@
   <h2 class="visning">Visning af pallen</h2>
   <hr class="midt-line">
   <!-- infoknap -->
-    <button class="se-palle" href="#myModal23"> Se palle </button>
+    <button class="se-palle" data-href="#myModal23" data-slide="prev"> Se palle </button>
     <div id="myModal23" class="modal">
       <!-- popup content-->
         <div class="infoknap-content">
           <span class="close">&times;</span>
           <h2> Visionlisering af din palle</h2>
-          <img class="infografi" src="img/topplacering-01.png" width="100%" height="auto">
+          <img class="infografi" src="img/topplacering-01.png" alt="infoknap om pallen">
         </div>
     </div>
   <!--<div class="se-palle"><a href="#">Se Palle</a></div> -->
