afkrydsningsfelt rettet til forbedring

--- a/template.html
+++ b/template.html
@@ -58,11 +58,11 @@
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
             </div>
- 
+
         </div>
         <!-- Pallenavn formularvalg -->
         <label for="fname">Palle Navn:</label><br>
-  
+
         <input type="text" id="fname5" name="fname" value="Fx. Shampoo levering"><br><br>
 
 
@@ -285,7 +285,7 @@
                   </div>
               </div>
 
-            <label class="container">Sæt Pakker Ved Kant
+            <label class="container">Pakker Ved Kant
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label><br>
