--- a/template.html
+++ b/template.html
@@ -58,11 +58,11 @@
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
             </div>
- 
+
         </div>
         <!-- Pallenavn formularvalg -->
         <label for="fname">Palle Navn:</label><br>
-  
+
         <input type="text" id="fname5" name="fname" value="Fx. Shampoo levering"><br><br>
 
 
@@ -476,7 +476,7 @@
 
     <button class="Nulstil" >Nulstil</button>
     <button class="GemPalle">Gem Palle</button>
-    <button class="Videre" onclick="window.location.href='panel.html';">Videre</button>
+    <button class="Videre" onclick="myFunction()">Videre</button>
 
 
 </body>
