--- a/template.html
+++ b/template.html
@@ -476,7 +476,21 @@
 
     <button class="Nulstil" >Nulstil</button>
     <button class="GemPalle">Gem Palle</button>
-    <button class="Videre" onclick="myFunction()">Videre</button>
+
+    <button class="knappen" data-href="#minKnap" data-slide="prev"></button>
+    <!-- Trigger/Open The Modal -->
+    <button id="minKnap">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="mitVindue" class="knap">
+
+      <!-- Modal content -->
+      <div class="vindue-content">
+        <span class="luk">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+
+    </div>
 
 
 </body>
