--- a/template.html
+++ b/template.html
@@ -487,7 +487,8 @@
       <!-- Modal content -->
       <div class="vindue-content">
         <span class="luk">&times;</span>
-        <p>Some text in the Modal..</p>
+        <p>Some text in the Modal..</p> <br>
+        <div class="acceptereknap"><a href="panel.html">Acceptere</a></div>
       </div>
 
     </div>
