--- a/panel.html
+++ b/panel.html
@@ -81,7 +81,7 @@
   <div class="print"><a href="#">Print Label</a></div>
   <div class="gem"><a href="#">Gem Skabelon</a></div>
   <div class="plan"><a href="#">Tilføj til planlægning</a></div>
-  <div class="pak"><a href="#" style="color: #ffffff;">Begynd Pakning</a></div>
+  <div class="pak"><a href="#" onclick="myFunction()">Begynd Pakning</a></div>
 </div>
 
 </body>
